Bug 429324 - New home screen MR !563 missing implementation on Android
Summary: New home screen MR !563 missing implementation on Android
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Android 10.x
: NOR critical
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks: 412232 428495
  Show dependency treegraph
 
Reported: 2020-11-18 21:51 UTC by amyspark
Modified: 2020-12-19 16:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2020-11-18 21:51:01 UTC
SUMMARY
The new home screen (MR 563) did not implement the corresponding changes for Android. This breaks Krita Next or compilation from master.

STEPS TO REPRODUCE
1. Build Krita from source.

OBSERVED RESULT
Krita fails with the following:

/krita/src/libs/ui/KisWelcomePageWidget.cpp:133:5: error: use of undeclared identifier 'helpTitleLabel_2'; did you mean 'helpTitleLabel'?
    helpTitleLabel_2->hide();
    ^~~~~~~~~~~~~~~~
    helpTitleLabel
/krita/android-build/krita-build/libs/ui/ui_KisWelcomePage.h:39:13: note: 'helpTitleLabel' declared here
    QLabel *helpTitleLabel;
            ^
/krita/src/libs/ui/KisWelcomePageWidget.cpp:145:5: error: use of undeclared identifier 'verticalLayout_3'
    verticalLayout_3->addWidget(donationLink);
    ^
/krita/src/libs/ui/KisWelcomePageWidget.cpp:146:5: error: use of undeclared identifier 'verticalLayout_3'
    verticalLayout_3->setAlignment(donationLink, Qt::AlignTop);
    ^
/krita/src/libs/ui/KisWelcomePageWidget.cpp:147:5: error: use of undeclared identifier 'verticalLayout_3'
    verticalLayout_3->setSpacing(20);
    ^
/krita/src/libs/ui/KisWelcomePageWidget.cpp:153:5: error: use of undeclared identifier 'verticalLayout_3'
    verticalLayout_3->addWidget(donationBannerImage);
    ^

EXPECTED RESULT
Krita compiles successfully.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 2 Bug Janitor Service 2020-12-19 16:29:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/627
Comment 3 amyspark 2020-12-19 16:45:18 UTC
Git commit fae735f3ab5f128edd0ed9229a79a58b65af5a64 by L. E. Segovia.
Committed on 19/12/2020 at 16:25.
Pushed by rempt into branch 'master'.

Fix Android-specific workarounds in Welcome page

M  +5    -5    libs/ui/KisWelcomePageWidget.cpp

https://invent.kde.org/graphics/krita/commit/fae735f3ab5f128edd0ed9229a79a58b65af5a64