Fix Android-specific workarounds in Welcome page

BUG: 429324